--- a/journal2/journal2.css
+++ b/journal2/journal2.css
@@ -7,7 +7,7 @@
 
 
 body {
-    font-family: Verdana, Arial, sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 14px;
 }
 
@@ -19,5 +19,6 @@ h1 {
 }
 
 h2 {
+
     font-size: 125%;
 }
