--- a/CSS_PRACTICE/elixir 3.css
+++ b/CSS_PRACTICE/elixir 3.css
@@ -1,10 +1,12 @@
-body{
-    font-family: Verdana,Arial,sans-serif;
-}
 
 h2{
     font-family: "setofont";
 }
+
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
 
 
     h2.green,
