--- a/CSS_PRACTICE/elixir 3.css
+++ b/CSS_PRACTICE/elixir 3.css
@@ -1,13 +1,15 @@
 
-body{
-background-color: #E8E868
-
-}
 
 
 h1{
     font-size: 350%;
+    color: #E85E00;
+    text-align:center;
+ background-color: #E8DB5E;
+    width: 1100px;
+
 }
+
 
 h2{
     font-family: "setofont";
@@ -24,21 +26,21 @@ body{
 
     h2.green,
     p.green {
-       color: #85B036
+       color: #85B036;
     }
     
     h2.blue,
     p.blue {
-        color: #4BBBEA
+        color: #4BBBEA;
     }
     
     h2.purple,
     p.purple {
-        color: #A15EB1
+        color: #A15EB1;
     }
     
     h2.red,
     p.red {
-        color: #B70000
+        color: #B70000;
     }
     </style>
