--- a/pikachu_begin/position.css
+++ b/pikachu_begin/position.css
@@ -29,6 +29,7 @@
                 height: 220px;
                 border-radius: 50%;
                 
+                font-size: 13px;
                 text-align:left; 
                 padding:20px;
                 background-color: #97461D;
